--- a/Laerdal.Scripts/Laerdal.Builder.targets
+++ b/Laerdal.Scripts/Laerdal.Builder.targets
@@ -4,15 +4,25 @@
 <!--                                                                                                           -->
 <!--   - to build with an explicit version specified in the cli:                                               -->
 <!--                                                                                                           -->
-<!--        # on macos                                                                                         -->
-<!--        dotnet    msbuild                                    \                                             -->
-<!--            Laerdal.Scripts/Laerdal.Builder.targets          \                                             -->
-<!--            '"/m:1"'  '"/p:Laerdal_Version=1.0.x.0"'                                                       -->
 <!--                                                                                                           -->
-<!--        # on windows powershell                                                                            -->
-<!--        dotnet   msbuild                                     ^                                             -->
-<!--            Laerdal.Scripts\Laerdal.Builder.targets          ^                                             -->
-<!--            /m:1   /p:Laerdal_Version=1.0.x.0                                                              -->
+<!--    # Note    If carthage fails in macos try cleaning up your carthage cache like so and then try again    -->
+<!--    # Note                                                                                                 -->
+<!--    # Note                       rm -rf ~/Library/Caches/org.carthage.CarthageKit                          -->
+<!--    # Note                                                                                                 -->
+<!--    #                                                                                                      -->
+<!--    # on macos                                                                                             -->
+<!--    dotnet    msbuild                                    \                                                 -->
+<!--        Laerdal.Scripts/Laerdal.Builder.targets          \                                                 -->
+<!--        '"/m:1"'                                         \                                                 -->
+<!--        '"/p:Laerdal_Version=1.0.x.0"'                   \                                                 -->
+<!--        '"/p:Laerdal_Github_Access_Token=<place your github access token here - its needed by carthage>"'  -->
+<!--                                                                                                           -->
+<!--    # on windows powershell                                                                                -->
+<!--    dotnet   msbuild                                     ^                                                 -->
+<!--        Laerdal.Scripts\Laerdal.Builder.targets          ^                                                 -->
+<!--        /m:1                                             ^                                                 -->
+<!--        /p:Laerdal_Version=1.0.x.0                       ^                                                 -->
+<!--        /p:Laerdal_Github_Access_Token="<place your github access token here - its needed by carthage>"    -->
 <!--                                                                                                           -->
 
 <Project DefaultTargets="BuildProjects">
