--- a/.gitignore
+++ b/.gitignore
@@ -406,7 +406,7 @@ ASALocalRun/
 
 Output/
 Laerdal.Dfu.Bindings.iOS/Carthage/
-Laerdal.Dfu.Bindings.iOS/Sharpie/
+# Laerdal.Dfu.Bindings.iOS/Sharpie/
 
 *.binlog
 *.csproj.xml
