--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,6 +24,8 @@ env:
   SCL_NUGET_ORG_FEED_API_KEY: ${{     secrets.NUGET_ORG_FEED_API_KEY         }}
   SCL_GITHUB_NUGET_FEED_USERNAME: ${{ secrets.SCL_GITHUB_NUGET_FEED_USERNAME }}
 
+  DOTNET_TARGET_WORKLOAD_VERSION: "8.0.402" # dont upgrade this lightheartedly   the workload snapshot implicitly defines which versions of Android/iOS/MacCatalyst SDKs are supported
+
 
 on:
   workflow_call: #     so that other workflows can trigger this
@@ -59,6 +61,7 @@ jobs:
           chmod  +x  "${{env.BUILD_REPOSITORY_FOLDERPATH}}/Laerdal.Scripts/Laerdal.SetupBuildEnvironment.sh"     \
                 &&                                                                                               \
                      "${{env.BUILD_REPOSITORY_FOLDERPATH}}/Laerdal.Scripts/Laerdal.SetupBuildEnvironment.sh"     \
+                             "${{env.DOTNET_TARGET_WORKLOAD_VERSION}}"                                           \
                              "https://nuget.pkg.github.com/Laerdal/index.json"                                   \
                              "${{env.SCL_GITHUB_NUGET_FEED_USERNAME}}"                                           \
                              "${{env.SCL_GITHUB_ACCESS_TOKEN}}"                                                  \
