--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.targets
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.targets
@@ -84,6 +84,8 @@
     <Target Name="PrintBuildInfo" BeforeTargets="BeforeBuild">
         <Message Importance="High" Text="*** Package Info ***" />
         <Message Importance="High" Text="PackageId: $(PackageId)" />
+        <Message Importance="High" Text="DesignTimeBuild: $(DesignTimeBuild)" />
+        <Message Importance="High" Text="BuildingProject: $(BuildingProject)" />
         <Message Importance="High" Text="Configuration: $(Configuration)" />
         <Message Importance="High" Text="TargetFramework: $(TargetFramework)" />
         <Message Importance="High" Text="DefineConstants: $(DefineConstants)" />
@@ -100,12 +102,12 @@
 
     <!-- ==================== VERSION ==================== -->
     <PropertyGroup>
-        <Laerdal_Version Condition="'$(Laerdal_Version)' == ''">1.0.0-local.0</Laerdal_Version>
+        <Laerdal_Version_Full Condition="'$(Laerdal_Version_Full)' == ''">1.0.0-local.0</Laerdal_Version_Full>
         <!-- Apply Version parts according to packaging standards -->
-        <AssemblyVersion>$(Laerdal_Version)</AssemblyVersion>
-        <AssemblyFileVersion>$(Laerdal_Version)</AssemblyFileVersion>
-        <AssemblyInformationalVersion>$(Laerdal_Version)</AssemblyInformationalVersion>
-        <Version>$(Laerdal_Version)</Version>
-        <PackageVersion>$(Laerdal_Version)</PackageVersion>
+        <AssemblyVersion>$(Laerdal_Version_Full)</AssemblyVersion>
+        <AssemblyFileVersion>$(Laerdal_Version_Full)</AssemblyFileVersion>
+        <AssemblyInformationalVersion>$(Laerdal_Version_Full)</AssemblyInformationalVersion>
+        <Version>$(Laerdal_Version_Full)</Version>
+        <PackageVersion>$(Laerdal_Version_Full)</PackageVersion>
     </PropertyGroup>
 </Project>
