--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
@@ -9,10 +9,15 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <TargetFramework>net8.0-ios</TargetFramework>
         <IsBindingProject>true</IsBindingProject>
+        
+        <TargetFrameworks>$(TargetFrameworks)net8.0-ios;</TargetFrameworks>
+        <TargetFrameworks>$(TargetFrameworks)net8.0-maccatalyst</TargetFrameworks>
 
         <IsOSX Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true' ">true</IsOSX>
+
+        <IsNet8IOS Condition="           $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'         ">true</IsNet8IOS>
+        <IsNet8MacCatalyst Condition="   $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst' ">true</IsNet8MacCatalyst>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -41,10 +46,16 @@
 
     <!-- ==================== TARGET PLATFORM VERSION ======================= -->
     <PropertyGroup>
-        <!-- ios   you will need specific workloads though    dotnet workload install maui -/-version 8.0.402   -->
-        <TargetPlatformVersion>17.0</TargetPlatformVersion>
-        <TargetPlatformMinVersion>14.2</TargetPlatformMinVersion>
-        <SupportedOSPlatformVersion>14.2</SupportedOSPlatformVersion>
+        <!-- you will need to be specific when it comes to workloads ->    dotnet workload install maui -/-version 8.0.402   -->
+
+        <!-- #1 these properties must be kept in sync between this file and laerdal.mcumgr.bindings.[android|ios|maccatalyst].csproj   -->
+        <!-- #2 even though this is library is pure csharp we still have to specify the target-plaform-version for each target because -->
+        <!--    if we dont dont the build system throws a tantrum from oct 2024 onwards                                                -->
+        <TargetPlatformVersion Condition="       '$(IsNet8IOS)'         == 'true' ">17.0</TargetPlatformVersion>
+        <SupportedOSPlatformVersion  Condition=" '$(IsNet8IOS)'         == 'true' ">11.0</SupportedOSPlatformVersion>
+
+        <TargetPlatformVersion Condition="       '$(IsNet8MacCatalyst)' == 'true' ">17.0</TargetPlatformVersion>
+        <SupportedOSPlatformVersion  Condition=" '$(IsNet8MacCatalyst)' == 'true' ">13.1</SupportedOSPlatformVersion>
     </PropertyGroup>
 
     <Import Project="Laerdal.targets"/>
