fix (Laerdal.Builder.targets): we now set the Laerdal_Version_Assembly property so that the sbom script will be satisfied

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -88,6 +88,7 @@ jobs:
                                                     -p:Laerdal_Source_Branch="${{ env.LAERDAL_SOURCE_BRANCH       }}"                                                                   \
                                                   -p:Laerdal_Repository_Path="${{ env.LAERDAL_REPOSITORY_PATH     }}"                                                                   \
                                               -p:Laerdal_Github_Access_Token="${{ env.SCL_GITHUB_ACCESS_TOKEN     }}"                                                                   \
+                                  -p:Laerdal_Should_Generate_and_Upload_Sbom="true"                                                                                                     \
                                                                                                                                                                                         \
                                     -p:Laerdal_Dependency_Tracker_Server_Url="${{ env.SCL_DEPENDENCY_TRACKER_SERVER_URL  }}"                                                            \
                              -p:Laerdal_Dependency_Tracker_Api_Key_File_Path="${{ env.BUILD_REPOSITORY_FOLDERPATH        }}/Laerdal.Scripts/dependency_tracker_api_key.ppk"             \
