fix (Laerdal.Dfu.Bindings.iOS.csproj): milestone refactoring to support mac-catalyst
    we now build against ios sdk 18.1 and maccatalyst sdk 15.1 while using xcode 16.1 on macos-15 vmimage (up from 14)

--- a/.gitignore
+++ b/.gitignore
@@ -406,7 +406,8 @@ ASALocalRun/
 
 Output/
 Laerdal.Dfu.Bindings.iOS/Carthage/
-# Laerdal.Dfu.Bindings.iOS/Sharpie/
+Laerdal.Dfu.Bindings.iOS/Sharpie/
+Laerdal.Dfu.Bindings.iOS/Frameworks/
 
 *.binlog
 *.csproj.xml
