refa: split up the single .csproj we had into 4 distinct projects so that we will now generate separate nugets for iOS, iOSSimulator.Arm64, iOSSimulator.x64 and MacCatalyst (wip)

--- a/.gitignore
+++ b/.gitignore
@@ -405,9 +405,11 @@ ASALocalRun/
 .localhistory/
 
 Output/
-Laerdal.Dfu.Bindings.iOS/Carthage/
-Laerdal.Dfu.Bindings.iOS/Sharpie/
-Laerdal.Dfu.Bindings.iOS/Frameworks/
+Laerdal.Dfu.Native/
+Laerdal.Dfu.Bindings.*/Carthage/
+Laerdal.Dfu.Bindings.*/Sharpie/
+Laerdal.Dfu.Bindings.*/Frameworks/
+
 
 *.binlog
 *.csproj.xml
@@ -415,3 +417,4 @@ Laerdal.Dfu.Bindings.iOS/Frameworks/
 # we dont want to allow any local nuget.configs to be checked in as they can cause issues with the build and/or contain hardcoded API keys with write access to the
 # nuget feed and this is something we definitely want to avoid at all costs for obvious reasons    such nuget.config files should be remain local to each dev machine
 [Nn][Uu][Gg][Ee][Tt].[Cc][Oo][Nn][Ff][Ii][Gg]
+
